@@ -1,3 +1,12 @@
+2008-07-14  Pavel Roskin  <proski@gnu.org>
+
+	* commands/blocklist.c (grub_cmd_blocklist): Fix format warning.
+	* commands/cmp.c (grub_cmd_cmp): Likewise.
+	* kern/dl.c (grub_dl_flush_cache): Likewise.
+	(grub_dl_load_core): Likewise.
+	* kern/elf.c (grub_elf32_load_phdrs): Likewise.
+	(grub_elf64_load_phdrs): Likewise.
+
 2008-07-13  Pavel Roskin  <proski@gnu.org>
 
 	* lib/LzmaEnc.c (LzmaEnc_SetProps): Fix warning about comparison
